<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Tags -->
    <string name="tag_ingredient">Ingredient</string>

    <!-- Application -->
    <string name="app_name">Cocktail Mix</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_rating">Clear Rating</string>

    <!-- Main Activity -->
    <string name="main_my_bar_button_description">Bar</string>
    <string name="main_all_cocktails_button_description">Cocktails</string>
    <string name="main_my_cocktails_button_description">Cocktails</string>
    <string name="main_ratings_button_description">Ratings</string>
    <string name="main_shopping_button_description">Shopping</string>

    <!-- My Bar Activity -->
    <string name="my_bar_title_activity">Cocktail Mix - My Bar</string>
    <string name="my_bar_tab_title_tab_section1">\r\nSpirits\r\n</string>
    <string name="my_bar_tab_title_tab_section2">\r\nLiqueurs\r\n</string>
    <string name="my_bar_tab_title_tab_section3">\r\nMixers\r\n</string>
    <string name="my_bar_tab_title_tab_section4">\r\nKitchen\r\n</string>
    <string name="my_bar_item_image_description">A picture of the bar item.</string>
    <string name="my_bar_has_ingredient_checkbox">Ingredient</string>

    <!-- Drink List Activity -->
    <string name="drink_list_title">Cocktail Mix - </string>
    <string name="drink_list_page_title_1">All Cocktails</string>
    <string name="drink_list_page_title_2">My Cocktails</string>
    <string name="drink_list_page_title_3">Cocktail Ratings</string>
    <string name="drink_list_item_image_description">Image of the cocktail.</string>
    <string name="drink_list_item_name">Testimi</string>
    <string name="drink_list_rating_image_content_description">The cocktails rating.</string>
    <string name="drink_list_item_blerb">Manual testing, White box testing and black box testing.</string>

    <!-- Drink Detail -->
    <string name="drink_detail_title">Cocktail Mix - Cocktail</string>
    <string name="drink_detail_name">Testini</string>
    <string name="drink_detail_image_description">An image of the Cocktail</string>
    <string name="drink_detail_ingredients_title">Ingredients</string>
    <string name="drink_detail_ingredients_text">3 parts Tin 1 part Testmouth</string>
    <string name="drink_detail_method_title">Method</string>
    <string name="drink_detail_rating_title">Your Rating</string>
    <string name="drink_detail_method_text">Stir with ice, strain into a cocktail glass, twist lemon peel over the top and serve garnished with a test case, preferably one that is nuts.</string>
    <string name="drink_detail_rating_cleared_message">The drink\'s ratings have been cleared.</string>
    <string name="rating_image_content_description_1">Rating 1</string>
    <string name="rating_image_content_description_2">Rating 2</string>
    <string name="rating_image_content_description_3">Rating 3</string>
    <string name="rating_image_content_description_4">Rating 4</string>
    <string name="rating_image_content_description_5">Rating 5</string>

    <!-- Shopping -->
    <string name="shopping_title">Cocktail Mix - Shopping</string>
    <string name="shopping_subtitle">Shopping Suggestion #1</string>
    <string name="shopping_singular_blurb_text">You will be able to make 1 new cocktail:</string>
    <string name="shopping_blurb_text">You will be able to make %d new cocktail(s):</string>
    <string name="shopping_blurb_nothing_text">Your bar is perfectly stocked.</string>
    <string name="shopping_ingredient1_text">Creme de Caco Brown</string>
    <string name="shopping_ingredient2_text">Vodka</string>
    <string name="shopping_ingredient3_text">Tonic Water</string>
    <string name="shopping_ingredient1_amount_text">$29.95</string>
    <string name="shopping_ingredient2_amount_text">$34.95</string>
    <string name="shopping_ingredient3_amount_text">$9.95</string>
    <string name="shopping_ingredient_total_amount_text">$75.85</string>

    <!-- Settings -->
    <string name="settings_title">Cocktail Mix - Settings</string>
    <string name="settings_measurement_system">Measurement Type:</string>
    <string name="settings_measurement_cl">cl (centiliters)</string>
    <string name="settings_measurement_ml">ml (milliliters)</string>
    <string name="settings_measurement_oz">oz (ounces)</string>

    <!-- Ingredient Detail -->
    <string name="ingredient_detail_title">Cocktail Mix - Ingredient Detail</string>
    <string name="ingredient_detail_name">Test-a-sec</string>
    <string name="ingredient_detail_image_description">An image of the ingredient.</string>
    <string name="ingredient_detail_description_text">Triple sec is an an orange flavoured liqueur made from the dried peels of bitter and sweet oranges. Some of the more famous varieties of triple sec are Cointreau and Grand Marnier.</string>
    <string name="ingredient_detail_drink_list_title">Cocktails with %s:</string>
    <string name="ingredient_detail_bar_has_ingredient_checkbox">Bar has ingredient</string>
    
    

</resources>