<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_measurement_system" />
    
    <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	    
	    <RadioButton android:id="@+id/clRadioButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_measurement_cl" 
			android:onClick="onRadioButtonClicked" />
	    
	    <RadioButton android:id="@+id/mlRadioButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_measurement_ml" 
			android:onClick="onRadioButtonClicked" />
	    
	    <RadioButton android:id="@+id/ozRadioButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_measurement_oz" 
	        android:onClick="onRadioButtonClicked" />

    </RadioGroup>
    
</LinearLayout>