<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drink_detail_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DrinkDetailActivity"
    tools:ignore="MergeRootFrame"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   	android:background="@color/White">
       
    <RelativeLayout
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
    
		<ImageView android:id="@+id/backgroundImageView" 
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_centerInParent="false"
			android:scaleType="fitCenter"
			android:contentDescription="@string/drink_detail_image_description" 
			android:src="@drawable/drink_martini"
			android:alpha=".30" />
		
		<TextView android:id="@+id/titleTextView" 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:textSize="30sp"
		    android:layout_marginTop="10dp"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:text="@string/drink_detail_name" />
		
		<LinearLayout android:id="@+id/ingredientsLayout" 
		    android:layout_below="@+id/titleTextView" 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:orientation="vertical"
		    android:layout_marginTop="10dp">
		    
			<TextView
			    android:layout_width="match_parent" 
			    android:layout_height="wrap_content" 
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:text="@string/drink_detail_ingredients_title" />
			
			<TextView android:id="@+id/ingredientsTextView" 
			    android:layout_width="match_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/drink_detail_ingredients_text"/>
			
		</LinearLayout>
		
		<LinearLayout android:id="@+id/methodLayout" android:layout_below="@+id/ingredientsLayout" 
		    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_marginTop="20dp">
			
			<TextView 
			    android:layout_width="match_parent" 
			    android:layout_height="wrap_content" 
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:text="@string/drink_detail_method_title" />
			
			<TextView android:id="@+id/methodTextView" 
			    android:layout_width="match_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/drink_detail_method_text"
			    android:progressDrawable="@drawable/star_yellow"
			    />
			
		</LinearLayout>
		    
		<LinearLayout android:id="@+id/ratingLayout" android:layout_below="@+id/methodLayout"
		    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_marginTop="20dp">
			
			<TextView 
			    android:layout_width="match_parent" 
			    android:layout_height="wrap_content" 
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:text="@string/drink_detail_rating_title" />
			
			<RatingBar android:id="@+id/ratingBar"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:numStars="5"
				android:stepSize="1"
				android:rating="0"
				android:isIndicator="false"
		    	android:layout_gravity="center_vertical"
				style="@style/customRatingBarStyle" 
					/>  
		</LinearLayout>
	</RelativeLayout>
</ScrollView>
