<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" 
    android:background="@color/White"
    android:orientation="horizontal"
    >
 
    <ImageView
        android:id="@+id/drink_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/drink_list_item_image_description"
        android:src="@drawable/drink_martini" 
        />
 
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
	    
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
	    	
		    <TextView android:id="@+id/drink_name_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"
		        android:textSize="20sp"
			    android:text="@string/drink_list_item_name"
			    android:textColor="@color/Black"
		    	/>
		    
	    </LinearLayout>
	    
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
		    	        <ImageView android:id="@+id/ratingImageView1" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_yellow" android:contentDescription="@string/drink_list_rating_image_content_description" />
	        <ImageView android:id="@+id/ratingImageView2" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_yellow" android:contentDescription="@string/drink_list_rating_image_content_description" />
	        <ImageView android:id="@+id/ratingImageView3" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_yellow" android:contentDescription="@string/drink_list_rating_image_content_description" />
	        <ImageView android:id="@+id/ratingImageView4" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_yellow" android:contentDescription="@string/drink_list_rating_image_content_description" />
	        <ImageView android:id="@+id/ratingImageView5" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_yellow" android:contentDescription="@string/drink_list_rating_image_content_description" />
	    </LinearLayout>
	    
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
        
		    <TextView
		        android:id="@+id/drink_blerb_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="14sp"
			    android:text="@string/drink_list_item_blerb" 
			    android:textColor="@color/Black"
		    	/>
        </LinearLayout>
	        
    </LinearLayout>
 
</LinearLayout>